Alterado link da imagem, substituido placekitten.com por placeholder.co

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Imagem com Link</h1>
         <a href="https:/www.google.com" target="_blank">
-            <img src="https://placekitten.com/200/300" alt="imagem com gatinho">
+            <img src="https://placehold.co/200x300" alt="imagem com gatinho">
         </a>
         
 </body>
